Revision history for MongoDBx-Queue

{{$NEXT}}

0.003     2013-03-28 18:34:49 America/New_York

  [ADDED]

  - Added 'search' and 'peek' methods to allow inspection of the queue

0.002     2012-09-05 18:08:14 America/New_York

  [INCOMPATIBLE CHANGES]

  - reschedule_task() now takes a hashref of options using the same format
    as add_task() instead of taking a scalar epoch seconds time argument
  
  [ADDED]

  - add_task() now supports setting arbitrary priority

  [CHANGED]

  - reserve_task() only find tasks up to a maximum priority; defaults to
    time(); this makes "future" tasks invisible unless a different
    maximum priority is requested

  - generally improved documentation for consistency describing new
    features


0.001     2012-08-30 17:34:16 America/New_York

  - First release
