@@ -1,5 +1,9 @@
 Revision history for MongoDBx-Queue
 
+  [FIXED]
+
+  - Have peek() do the right thing for list or scalar return context
+
 {{$NEXT}}
 
 0.003     2013-03-28 18:34:49 America/New_York
